--- a/aframe/geo.html
+++ b/aframe/geo.html
@@ -16,10 +16,14 @@
       depth="20"
       height="50"
       width="10"
-      rotation="45 45 45"
-      gps-entity-place="latitude: 52.41651734634933; longitude: 13.371413496076306"
-      position="0 0 100" />
-    <a-camera gps-camera rotation-reader></a-camera>
+      rotation="45 45 45"      
+      gps-entity-place="latitude: 52.01; longitude: 13.01"
+      position="0 0 0" />
+    <a-camera
+      simulateLatitude="52"
+      simulateLongitude="13"
+      gps-camera
+      rotation-reader></a-camera>
   </a-scene>
 </body>
 </html>
