--- a/aframe/geo.html
+++ b/aframe/geo.html
@@ -12,12 +12,12 @@
     <!-- define a camera which will move according to the marker position -->
     <!-- <a-marker-camera preset='hiro'></a-marker-camera> -->
     <a-box
-      color="yellow"
-      depth="20"
-      height="50"
-      width="10"
-      rotation="45 45 45"      
-      gps-entity-place="latitude: 52.01; longitude: 13.01"
+      color="red"
+      depth="1"
+      height="1"
+      width="1"
+      rotation="45 45 45"
+      gps-entity-place="latitude: 52; longitude: 13"
       position="0 0 0" />
     <a-camera
       simulateLatitude="52"
