--- a/aframe/geo.html
+++ b/aframe/geo.html
@@ -16,13 +16,16 @@
       depth="1"
       height="1"
       width="1"
-      rotation="45 45 45"
+      rotation="0 0 0"
       gps-entity-place="latitude: 52.0001; longitude: 13.0001"
       position="0 5 0" />
     <a-camera
       simulateLatitude="52"
       simulateLongitude="13"
-      gps-camera
+      id='camera1'
+      look-controls-enabled='false'
+      arjs-look-controls='smoothingFactor: 0.1'
+      gps-camera='gpsMinDistance: 5'
       rotation-reader></a-camera>
   </a-scene>
 </body>
