--- a/aframe/geo.html
+++ b/aframe/geo.html
@@ -20,12 +20,10 @@
       gps-entity-place="latitude: 52.0001; longitude: 13.0001"
       position="0 5 0" />
     <a-camera
-      simulateLatitude="52"
-      simulateLongitude="13"
       id='camera1'
       look-controls-enabled='false'
       arjs-look-controls='smoothingFactor: 0.1'
-      gps-camera='gpsMinDistance: 5'
+      gps-camera='gpsMinDistance: 5; simulateLatitude: 52; simulateLongitude: 13'
       rotation-reader></a-camera>
   </a-scene>
 </body>
