--- a/aframe/geo.html
+++ b/aframe/geo.html
@@ -20,13 +20,13 @@
       height="1"
       width="1"
       rotation="0 0 0"
-      gps-entity-place="latitude: 52.001; longitude: 13.001"
-      position="0 0 0" />
+      gps-entity-place="latitude: 52; longitude: 13"
+      position="5 5 5" />
     <a-camera
       id='camera1'
       look-controls-enabled='false'
       arjs-look-controls='smoothingFactor: 0.1'
-      gps-camera='gpsMinDistance: 5; simulateLatitude: 52; simulateLongitude: 13'
+      gps-camera='minDistance: 0; gpsMinDistance: 5; simulateLatitude: 52; simulateLongitude: 13'
       rotation-reader></a-camera>
   </a-scene>
 </body>
