--- a/aframe/geo.html
+++ b/aframe/geo.html
@@ -2,8 +2,8 @@
 <html lang="en" itemscope itemtype="http://schema.org/Article">
 <head>
   <meta charset="utf-8">
-  <script src="https://aframe.io/releases/0.6.0/aframe.min.js"></script>
-  <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+  <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+  <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
 </head>
 <body style='margin : 0px; overflow: hidden;'>
   <a-scene
