--- a/aframe/geo.html
+++ b/aframe/geo.html
@@ -31,5 +31,15 @@
         >
 		</a-camera>
 	</a-scene>
+  <div style="
+    position:fixed;
+    z-index:999;
+    top:0;
+    left:0;
+    background:white;
+    color:black;
+    padding: 3px 5px;
+    border: 1px solid black;
+  ">v0.1</div>
 </body>
 </html>
