--- a/aframe/geo.html
+++ b/aframe/geo.html
@@ -20,15 +20,17 @@
         ></a-image> -->
 
         <!-- ~ 0m far -->
-        <a-image src="place.png" gps-entity-place="latitude: 44.504348; longitude: 11.301027;"
-            ></a-image>
+        <a-image
+          src="place.png"
+          gps-entity-place="latitude: 44.504348; longitude: 11.301027;"
+          ></a-image>
         
         
         <a-box
           color="red"
-          depth="1"
-          height="1"
-          width="1"
+          depth="0.5"
+          height="0.5"
+          width="0.5"
           rotation="0 0 0"
           gps-entity-place="latitude: 44.504348; longitude: 11.301027;"
           position="0 0 0" />
@@ -50,6 +52,6 @@
     color:black;
     padding: 3px 5px;
     border: 1px solid black;
-  ">v0.1</div>
+  ">v0.11</div>
 </body>
 </html>
