--- a/aframe/geo.html
+++ b/aframe/geo.html
@@ -20,10 +20,10 @@
         ></a-image> -->
 
         <!-- ~ 0m far -->
-        <a-image
+        <!-- <a-image
           src="place.png"
           gps-entity-place="latitude: 44.504348; longitude: 11.301027;"
-          ></a-image>
+          ></a-image> -->
         
         
         <a-box
