--- a/aframe/geo.html
+++ b/aframe/geo.html
@@ -28,12 +28,11 @@
         
         <a-box
           color="red"
-          depth="0.5"
-          height="0.5"
-          width="0.5"
+          depth="0.25"
+          height="0.25"
+          width="0.25"
           rotation="0 0 0"
-          gps-entity-place="latitude: 44.50437; longitude: 11.30106;"
-          position="2 2 0" />
+          gps-entity-place="latitude: 44.504348; longitude: 11.301027;" />
 
         <!-- using gpsMinDistance: 5 => update GPS only if user moves by 5 meters or more => avoid shaking for near objects -->
         <!-- using accelerationToMove: 1.0 => 'smooth' inertial sensors precision precision in order to avoid distant places shaking -->
