--- a/aframe/geo.html
+++ b/aframe/geo.html
@@ -31,8 +31,8 @@
           depth="0.25"
           height="0.25"
           width="0.25"
-          rotation="0 0 0"
-          gps-entity-place="latitude: 44.504348; longitude: 11.301027;" />
+          gps-entity-place="latitude: 44.504348; longitude: 11.301027;"
+          ></a-box>
 
         <!-- using gpsMinDistance: 5 => update GPS only if user moves by 5 meters or more => avoid shaking for near objects -->
         <!-- using accelerationToMove: 1.0 => 'smooth' inertial sensors precision precision in order to avoid distant places shaking -->
@@ -51,6 +51,6 @@
     color:black;
     padding: 3px 5px;
     border: 1px solid black;
-  ">v0.114</div>
+  ">v0.115</div>
 </body>
 </html>
