--- a/aframe/geo.html
+++ b/aframe/geo.html
@@ -31,6 +31,7 @@
           depth="0.25"
           height="0.25"
           width="0.25"
+          position="0 1 0"
           gps-entity-place="latitude: 44.504348; longitude: 11.301027;"
           ></a-box>
 
@@ -51,6 +52,6 @@
     color:black;
     padding: 3px 5px;
     border: 1px solid black;
-  ">v0.115</div>
+  ">v0.116</div>
 </body>
 </html>
