--- a/aframe/geo.html
+++ b/aframe/geo.html
@@ -32,6 +32,7 @@
           height="0.25"
           width="0.25"
           position="0 1 0"
+          look-at="[gps-camera]"
           gps-entity-place="latitude: 44.504348; longitude: 11.301027;"
           ></a-box>
 
@@ -52,6 +53,6 @@
     color:black;
     padding: 3px 5px;
     border: 1px solid black;
-  ">v0.116</div>
+  ">v0.117</div>
 </body>
 </html>
