--- a/aframe/geo.html
+++ b/aframe/geo.html
@@ -32,9 +32,11 @@
           height="0.25"
           width="0.25"
           position="0 1 0"
-          look-at="[gps-camera]"
+          rotation="0 0 0"
           gps-entity-place="latitude: 44.504348; longitude: 11.301027;"
           ></a-box>
+
+        <!-- look-at="[gps-camera]" -->
 
         <!-- using gpsMinDistance: 5 => update GPS only if user moves by 5 meters or more => avoid shaking for near objects -->
         <!-- using accelerationToMove: 1.0 => 'smooth' inertial sensors precision precision in order to avoid distant places shaking -->
@@ -53,6 +55,6 @@
     color:black;
     padding: 3px 5px;
     border: 1px solid black;
-  ">v0.117</div>
+  ">v0.118</div>
 </body>
 </html>
