--- a/03_marker/image.html
+++ b/03_marker/image.html
@@ -6,7 +6,7 @@
     <script src="../assets/arjs/aframe-ar-nft.js"></script>
   </head>
   <body>
-    <a-scene vr-mode-ui="enabled: false;"
+    <!--<a-scene vr-mode-ui="enabled: false;"
     renderer="logarithmicDepthBuffer: true;"
     embedded
     arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;">
@@ -18,10 +18,8 @@
       smoothTolerance=".01"
       smoothThreshold="5"
     >
-      <!-- create your content here. just a box for now -->
       <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
-      <!-- define a camera which will move according to the marker position -->
-      </a-nft>
+      </a-nft>-->
       <a-nft
       type="nft"
       url="../assets/personal/figure"
