--- a/03_marker/image.html
+++ b/03_marker/image.html
@@ -22,7 +22,7 @@
       </a-nft>-->
       <a-nft
       type="nft"
-      url="../assets/personal/figure"
+      url="/assets/personal/figure"
       smooth="true"
       smoothCount="10"
       smoothTolerance=".01"
