--- a/03_marker/image.html
+++ b/03_marker/image.html
@@ -6,11 +6,11 @@
     <script src="../assets/arjs/aframe-ar-nft.js"></script>
   </head>
   <body>
-    <!--<a-scene vr-mode-ui="enabled: false;"
+    <a-scene vr-mode-ui="enabled: false;"
     renderer="logarithmicDepthBuffer: true;"
     embedded
     arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;">
-    <a-nft
+    <!--<a-nft
       type="nft"
       url="../assets/personal/map"
       smooth="true"
