--- a/02_basic_ar/index.html
+++ b/02_basic_ar/index.html
@@ -28,7 +28,7 @@
       <a-video position="0 4 -3" src="#atomic-video" rotation="45 0 0" width="4" height="3"></a-video>-->
 
       <!-- 3D assets -->
-      <a-gltf-model position="-4 0 -5" src="#gltf-cube"></a-gltf-model>
+      <a-gltf-model scale="1 1 1" position="-4 0 -5" src="#gltf-cube"></a-gltf-model>
     </a-scene>
   </body>
 </html>
