--- a/03_marker/image.html
+++ b/03_marker/image.html
@@ -27,7 +27,7 @@
   </head>
   <body>
   <div class="arjs-loader">
-    <div>V2: Loading, please wait...</div>
+    <div>V3: Loading, please wait...</div>
   </div>
     <a-scene vr-mode-ui="enabled: false;"
     renderer="logarithmicDepthBuffer: true;"
@@ -36,15 +36,15 @@
     <a-assets timeout="3000">
         <img id="marker-image" src="../assets/images/marker.png">
       </a-assets>
-    <!--<a-nft
-      type="nft"
-      url="../assets/personal/map"
-      smooth="true"
-      smoothCount="10"
-      smoothTolerance=".01"
-      smoothThreshold="5"
-    >
-      <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
+      <a-nft
+        type="nft"
+        url="ar-prototyping/assets/personal/map"
+        smooth="true"
+        smoothCount="5"
+        smoothTolerance=".01"
+        smoothThreshold="2"
+      >
+        <a-image position="200 50 0" rotation="-90 0 0" width="100" height="150" src="#marker-image"></a-image>
       </a-nft>-->
       <a-nft
         type="nft"
