--- a/03_marker/index.html
+++ b/03_marker/index.html
@@ -8,7 +8,7 @@
   <body>
     <a-scene embedded arjs>
       <!-- create your content here. just a box for now -->
-      <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
+      <a-box position='0 1 0' width="1" height="1" depth="1" color="#4CC3D9"></a-box>
       <!-- define a camera which will move according to the marker position -->
       <a-marker-camera preset='hiro'></a-marker-camera>
       <!--<a-marker-camera type='pattern' url='../assets/arjs/pattern-marker.patt'></a-marker-camera>-->
