--- a/08_3d/index.html
+++ b/08_3d/index.html
@@ -25,6 +25,8 @@
 
         tick: function (time, timeDelta) {
           this.el.object3D.rotation.x += 0.1 * Math.PI / 180;
+          this.el.object3D.rotation.z += 0.1 * Math.PI / 180;
+          this.el.object3D.rotation.y += 0.1 * Math.PI / 180;
         },
 
         remove: function() {
