--- a/03_marker/index.html
+++ b/03_marker/index.html
@@ -10,11 +10,13 @@
     renderer="logarithmicDepthBuffer: true;"
     embedded
     arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;">
-      <!-- create your content here. just a box for now -->
-      <a-box position='0 0 0' rotation="0 0 0" width="1" height="1" depth="1" color="#ff0000"></a-box>
       <!-- define a camera which will move according to the marker position -->
-      <a-marker-camera preset='hiro'></a-marker-camera>
-      <!--<a-marker-camera type='pattern' url='../assets/arjs/pattern-marker.patt'></a-marker-camera>-->
+      <a-marker preset='hiro'>
+        <!-- create your content here. just a box for now -->
+        <a-box position='0 0 0' rotation="0 0 0" width="1" height="1" depth="1" color="#ff0000"></a-box>
+      </a-marker>
+      <!--<a-marker type='pattern' url='../assets/arjs/pattern-marker.patt'></a-marker>-->
     </a-scene>
+    <a-entity camera></a-entity>
   </body>
 </html>
