--- a/03_marker/index.html
+++ b/03_marker/index.html
@@ -13,7 +13,7 @@
       <!-- define a camera which will move according to the marker position -->
       <a-marker preset='hiro'>
         <!-- create your content here. just a box for now -->
-        <a-box position='0 0 0' rotation="0 0 0" width="1" height="1" depth="1" color="#ff0000"></a-box>
+        <a-box position='0 0 0' rotation="0 0 0" width="1" height="1" depth="1" color="#00ff00"></a-box>
       </a-marker>
       <!--<a-marker type='pattern' url='../assets/arjs/pattern-marker.patt'></a-marker>-->
     </a-scene>
