--- a/03_marker/index.html
+++ b/03_marker/index.html
@@ -11,14 +11,14 @@
     embedded
     arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;">
       <!-- define a camera which will move according to the marker position -->
+      <!-- <a-marker type='pattern' url='../assets/arjs/pattern-marker.patt'> -->
       <a-marker preset='hiro'>
         <!-- create your content here. just a box for now -->
         <a-box 
           position='0 0.5 0'
           material='color: red;'></a-box>
       </a-marker>
-      <!--<a-marker type='pattern' url='../assets/arjs/pattern-marker.patt'></a-marker>-->
+      <a-entity camera></a-entity>
     </a-scene>
-    <a-entity camera></a-entity>
   </body>
 </html>
