--- a/asami-test/index.html
+++ b/asami-test/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-    <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@0d804add6133bc90dab1ce708fd5e3be9855cc98/dist/aframe-master.min.js"></script>
+    <script src="../assets/aframe/aframe-v1.2.0.min.js"></script>
     <script src="../assets/arjs/aframe-ar-nft.js"></script>
     <style>
       .arjs-loader {
