--- a/asami-test/index.html
+++ b/asami-test/index.html
@@ -50,7 +50,7 @@
     <a-scene vr-mode-ui="enabled: false;"
     renderer="logarithmicDepthBuffer: true;"
     embedded
-    arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;"
+    arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false; sourceWidth:1920; sourceHeight:1080; displayWidth: 1920; displayHeight: 1080;"
     device-orientation-permission-ui="enabled: false;">
      
       <a-assets timeout="3000">
