--- a/asami-test/index.html
+++ b/asami-test/index.html
@@ -2,8 +2,31 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-    <script src="../assets/aframe/aframe-v1.2.0.min.js"></script>
-    <script src="../assets/arjs/aframe-ar-nft.js"></script>
+    <script src='https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js'></script>
+
+<style>
+  .arjs-loader {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 9999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .arjs-loader div {
+    text-align: center;
+    font-size: 1.25em;
+    color: white;
+  }
+</style>
+
+<!-- rawgithack development URL -->
+<script src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js'></script>
     <style>
       .arjs-loader {
         height: 100%;
@@ -50,9 +73,8 @@
     <a-scene vr-mode-ui="enabled: false;"
     renderer="logarithmicDepthBuffer: true;"
     embedded
-    arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false; sourceWidth:1920; sourceHeight:1080; displayWidth: 1920; displayHeight: 1080;"
-    device-orientation-permission-ui="enabled: false;">
-     
+    arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;">
+
       <a-assets timeout="3000">
         <a-asset-item id="gltf-mauer" src="../assets/gltf/berlinmauer.gltf"></a-asset-item>
         <img id="set1-image" src="../assets/images/set1.png">
