--- a/asami-test/index.html
+++ b/asami-test/index.html
@@ -89,12 +89,11 @@
       <a-image position="-1 0.75 -3" width="1" height="1.5" id="staticimage" src="#set1-image"></a-image>
       <a-nft
         type="nft"
-        size="0.5"
-        url="ar-prototyping/assets/asami/220112Graffiti-erzaehlt-Berlin"
+        url="./ar-prototyping/assets/asami/220112Graffiti-erzaehlt-Berlin"
         smooth="true"
-        smoothCount="5"
-        smoothTolerance=".1"
-        smoothThreshold="2"
+        smoothCount="10"
+        smoothTolerance="0.01"
+        smoothThreshold="5"
         >
         <!--<a-image position="500 0.75 0" rotation="-90 0 0" width="50" height="150" src="#set1-image"></a-image>-->
         
